--- a/rep-go/package.json
+++ b/rep-go/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm install",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon --debug ./bin/www"
   },
   "keywords": [
     "MongoDB",
