--- a/rep-go-api/package.json
+++ b/rep-go-api/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.7.1",
     "express": "^4.14.0",
     "mongoose": "^4.5.8"
   }
